--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>don't be a stranger!</title>
+	<title>paper plane</title>
+  <link rel="icon" href="Paper_Plane.png">
 
   <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-analytics.js"></script>
