final final adjustments

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
   <img src="static-plane.gif" class="plane static" width = 400px>
 
   <div class="return">
-    <img src="return-letter-ph.png" class="returnImage">
+    <img src="paper-final.png" class="returnImage" width=450px>
     <div class="returnText">
       <p></p>
     </div>
